--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -442,6 +442,81 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
+                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank"><b>KK加速</b></a>
+                                </div>
+                                <div class="panel-body">
+                                    
+                                    <dl>
+                                        <dt>资费</dt>
+                                                                                <dd>
+                                            <p>
+                                                <label>Pro | 不限时：</label> ¥68.00 /一次性。 
+                                                                                                不限时200G高速流量; 
+                                                                                                不限速，畅享极速网络; 
+                                                                                                仅限个人使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>Air | 不限时：</label> ¥38.00 /一次性。 
+                                                                                                不限时100G高速流量; 
+                                                                                                不限速，畅享极速网络; 
+                                                                                                仅限个人使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>专业级：</label> ¥18.00 /每月。 
+                                                                                                每月500G高速流量; 
+                                                                                                1Gbps带宽，畅享极速网络; 
+                                                                                                仅限小团体使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>体验级：</label> ¥8.00 /每月。 
+                                                                                                每月168G高速流量; 
+                                                                                                300Mbps带宽，畅享极速网络; 
+                                                                                                仅限个人使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>体验级：</label> ¥8.00 /每月。 
+                                                                                                每月168G高速流量; 
+                                                                                                300Mbps带宽，畅享极速网络; 
+                                                                                                仅限个人使用（不限制设备）; 
+                                                                                                全球 BGP+内网跨境专线; 
+                                                                                                支持Netflix等流媒体服务; 
+                                                                                                售后 24*7在线客服为您售后; 
+                                                                                                不记录任何网络日志，放心使用！; 
+                                                                                            </p>
+                                        </dd>
+                                                                            </dl>
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank">点击查看</a>
+                                </div>
+                            </div>
+                            <hr />
+                                                        <div class="panel panel-default">
+                                <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
                                 </div>
                                 <div class="panel-body">
@@ -551,16 +626,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-74883.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
-                        <li class="py-2"><a href="/news/article-76900.htm" title="宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）">宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）</a></li>
-                        <li class="py-2"><a href="/news/article-73541.htm" title="动物疫苗使用方法视频（动物疫苗使用方法视频教程）">动物疫苗使用方法视频（动物疫苗使用方法视频教程）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-15-node-share-links.htm" title="VPN网关 | 3月15日19.1M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点">VPN网关 | 3月15日19.1M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-72881.htm" title="动物疫苗哪个好 动物疫苗品牌">动物疫苗哪个好 动物疫苗品牌</a></li>
-                        <li class="py-2"><a href="/news/article-70890.htm" title="网络协议之:socket协议详解之Socket和Stream Socket">网络协议之:socket协议详解之Socket和Stream Socket</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-12-free-node-subscribe-links.htm" title="VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-23-free-node-subscribe-links.htm" title="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点">VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-27-free-node-subscribe-links.htm" title="VPN网关 | 3月27日18.3M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">VPN网关 | 3月27日18.3M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）">宠物之家托运怎么收费（宠物托运咨询哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-71558.htm" title="宠物粮代理怎么拿（宠物粮代理加盟）">宠物粮代理怎么拿（宠物粮代理加盟）</a></li>
+                        <li class="py-2"><a href="/news/article-77585.htm" title="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）">宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-26-free-node-subscribe-links.htm" title="VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点">VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-node-subscribe-links.htm" title="VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-74884.htm" title="猫咪领养网广州（广州猫咪领养公众号）">猫咪领养网广州（广州猫咪领养公众号）</a></li>
+                        <li class="py-2"><a href="/news/article-72218.htm" title="农大动物医院几点关门 农大动物医院几点关门营业">农大动物医院几点关门 农大动物医院几点关门营业</a></li>
+                        <li class="py-2"><a href="/news/article-79647.htm" title="动物医院需要几个兽医资格证才能进行体检（动物医院要求）">动物医院需要几个兽医资格证才能进行体检（动物医院要求）</a></li>
+                        <li class="py-2"><a href="/news/article-83125.htm" title="动物防疫站周六周日上班吗（动物疫病预防控制中心周末上班吗）">动物防疫站周六周日上班吗（动物疫病预防控制中心周末上班吗）</a></li>
+                        <li class="py-2"><a href="/news/article-76220.htm" title="python中脚本怎么执行sql语句？">python中脚本怎么执行sql语句？</a></li>
                     </ul>
     </div>
 </div>
@@ -572,7 +647,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">63</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                     </ul>
     </div>
